--- a/configure.ac
+++ b/configure.ac
@@ -27,4 +27,34 @@ AC_DEFINE([HAVE_RES_GETSERVERS], [1],
 AC_MSG_RESULT(yes)
 ],
 [AC_MSG_RESULT(no)])
+AC_MSG_CHECKING(for struct sockaddr_in.sin_len)
+AC_TRY_COMPILE([
+#include <sys/socket.h>
+#include <netinet/in.h>
+],
+[
+struct sockaddr_in sin;
+sin.sin_len = 0;
+],
+[
+AC_DEFINE([HAVE_SIN_LEN], [1],
+	 [Define to 1 struct sockaddr_in has sin_len.])
+AC_MSG_RESULT(yes)
+],
+[AC_MSG_RESULT(no)])
+AC_MSG_CHECKING(for struct sockaddr_in6.sin6_len)
+AC_TRY_COMPILE([
+#include <sys/socket.h>
+#include <netinet/in.h>
+],
+[
+struct sockaddr_in6 sin6;
+sin6.sin6_len = 0;
+],
+[
+AC_DEFINE([HAVE_SIN6_LEN], [1],
+	 [Define to 1 struct sockaddr_in6 has sin6_len.])
+AC_MSG_RESULT(yes)
+],
+[AC_MSG_RESULT(no)])
 AC_OUTPUT
