add config.h, config.h.in, config.guess, config.sub to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
-*~
 *.bak
-/autom4te.cache/
-/configure
-/Makefile.in
-/Makefile
 *.o
-/genreport
+*~
+.deps/
+/Makefile
+/Makefile.in
+/autom4te.cache/
+/config.guess
+/config.h
+/config.h.in
 /config.log
 /config.status
-.deps/
+/config.sub
 /configure
+/configure
+/genreport
